     * Fix crash when requesting system information whilst in hyperspace (#975)
     * Messages no longer cause the game to un-pause when they clear (#966)
     * Game no longer quits if you cancel loading from the main menu (#920)
     * Fix game crash if a script tries to add or remove a negative amount of
       cargo or equipment (#982)
     * Fix flipped Hammerhead "neck" textures (#986)

   * Internal changes
     * Silence MSVC warnings (#964)
     * Remove dependencies on Pi from Texture


Alpha 19

   * New features
     * Sidereal camera, an external camera that holds its position relative to
       the stars. Great for screenshots! (#932)
     * Moon height map. Now looks like the real thing! (#936)
     * Lua-based body name generator. Planets and starports now have much more
       interesting/varied names (#896, #926)
     * Joystick deadzone support (#870)

   * Minor changes and tweaks
     * Roll keys now work while using mouse control (#904, #850, #278, #914, #919)
     * Camera quick-switch using Shift+1-4 in the main view (#932)
     * Sector view now shows line from current to target system (#843, #845)
     * Optimised nearby system lookups for scripts. Significantly improves
       game startup time (#937)
     * Various TradeShips optimisiations and fixes (#917)

   * Fixes
     * Ensure bulletin board is created before ship docks with station (#899)
     * Don't propogate mouse wheel events in one view to other views (#903, #225)
     * Show distance to dock on target square when docking clearance is granted (#902)
     * Fix crashes if Lua Space, Timer or UI methods are called before the
       game loads (#885, #911)
     * Fix background star jitter (#910)
     * Fix "rough landing" sound being played globally (#925, #895, #865)
     * Reduce the number of nearby system searches done by scripts (#927)
     * Fixed HDR screen flicker (#928)
     * Fixed autopilot hangs related to gravpoint frames and small bodies (#935, #921)