@@ -27,6 +27,8 @@ Alpha 20
      * Fix game crash if a script tries to add or remove a negative amount of
        cargo or equipment (#982)
      * Fix flipped Hammerhead "neck" textures (#986)
+     * Don't show "fly to" option for combat target if the player does not
+       have an autopilot fitted (#988)
 
    * Internal changes
      * Silence MSVC warnings (#964)
